# py-rcsb-api

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  NOTICE.md  README.md  azure-pipelines.yml  azure-template-publish-job.yml  azure-template-tox-job.yml  codemeta.json  pylintrc  pyproject.toml  requirements.txt  setup.py  tox.ini  walk_through.ipynb
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml  issue_report.yml  question.yml
docs/: Makefile  additional_examples.md  api.md  api.rst  conf.py  implementation_details.md  index.md  index.rst  query_construction.md  quickstart.md  requirements.txt
docs/_static/: custom.css
docs/_static/css/: custom.css
docs/config/: custom_configuration.md  custom_configuration_2.md
docs/data_api/: additional_examples.md  api.rst  custom_configuration.md  implementation_details.md  query_construction.md  quickstart.md
docs/model_api/: api.rst  quickstart.md
docs/search_api/: additional_examples.md  api.rst  attributes.md  query_construction.md  quickstart.md
docs/seq_api/: additional_examples.md  api.rst  quickstart.md
notebooks/: covid.ipynb  data_quickstart.ipynb  model_quickstart.ipynb  multisearch.ipynb  quick_start.ipynb  quickstart.ipynb  search_data_workflow.ipynb  search_examples.ipynb  search_quickstart.ipynb  sequence_coord_quickstart.ipynb  story.ipynb
rcsb/api/: __init__.py
rcsbapi/: __init__.py  config.py  const.py  graphql_schema.py
rcsbapi/ModelServer/: ModelServer_query.py  ModelServer_schema.py  test.py
rcsbapi/data/: __init__.py  constants.py  data_query.py  data_schema.py  data_schema_seq_merge.py  query.py  schema.py  test.py  test_data_schema.py  testing_test.py  testschema.py
rcsbapi/data/resources/: assembly.json  branched_entity.json  branched_entity_instance.json  chem_comp.json  data_api_schema.json  drugbank.json  entry.json  nonpolymer_entity.json  nonpolymer_entity_instance.json  polymer_entity.json  polymer_entity_instance.json  pubmed.json  uniprot.json
rcsbapi/dev_tools/: update_schema.py
rcsbapi/files/: README.md  __init__.py  file_download.py
rcsbapi/model/: __init__.py  model_query.py  model_schema.py  test.py  test_query.py  testing.py
rcsbapi/model/resources/: ModelServer.json  modelserver_api_schema.json
rcsbapi/resources/: data_api_schema.json  entry.json  nonpolymer_entity.json  polymer_entity_instance.json
rcsbapi/search/: __init__.py  constants.py  query.py  schema.py  search_query.py  search_schema.py  search_schema_FIXED.py  search_schema_debugging.py  search_schema_rust_WORKS.py  search_schema_rust_WORKSNEW.py  update_schema.py
rcsbapi/search/resources/: chemical_schema.json  chemical_schema_good.json  compare_jsons.py  metadata_schema.json  structure_schema.json  structure_schema_good.json  structure_schema_jul8.json
rcsbapi/sequence/: __init__.py  query.py  schema.py  seq_query.py  seq_schema.py
rcsbapi/sequence/resources/: seq_api_schema.json
tests/: test_data_query.py  test_data_schema.py  test_model_query.py  test_search_query.py  test_search_schema.py  test_seq_query.py
