[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rcsb-api"
description = "Python package interface for RCSB.org API services"
version = "1.7.1"
requires-python = ">=3.9,<4.0"
license = "MIT"
license-files = ["LICENSE", "NOTICE.md"]
authors = [
  { name = "Dennis Piehl", email = "dennis.piehl@rcsb.org" }
]
readme = "README.md"
keywords = ["RCSB", "PDB", "bioinformatics", "API", "protein", "structure"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Operating System :: OS Independent",
  "Natural Language :: English",
  "Typing :: Typed",
]
dependencies = [
    "httpx>=0.26.0",
    "nest_asyncio>=1.6.0",
    "rustworkx",
    "graphql-core",
    "tqdm"
]

[project.urls]
Homepage = "https://github.com/rcsb/py-rcsb-api"
Repository = "https://github.com/rcsb/py-rcsb-api"
Issues = "https://github.com/rcsb/py-rcsb-api/issues"
Documentation = "https://rcsbapi.readthedocs.io/"
Changelog = "https://github.com/rcsb/py-rcsb-api/blob/master/CHANGELOG.md"

[project.optional-dependencies]
tests = ["tox", "pylint", "black>=21.5b1", "flake8", "coverage"]
docs = ["sphinx", "sphinx-rtd-theme", "myst-parser"]  # should match docs/requirements.txt
# dev = ["check-manifest"]

# ----------------  hatch configuration ----------------
[tool.hatch.build.targets.sdist]
include = [
    "/rcsbapi/**",
    "/README.md",
    "/pyproject.toml",
    "/LICENSE",
    "/CHANGELOG.md",
    "/codemeta.json",
    "/NOTICE.md",
    "/docs/**",
    "/tests/**",
]
exclude = [
    "/tests/test-output*",
    "/tests/test-data*",
]

[tool.hatch.build.targets.wheel]
packages = ["rcsbapi"]
exclude = [
    "/rcsbapi/dev_tools*",
    "/rcsbapi/*/resources/*.json",
    "/tests/test-output*",
    "/tests/test-data*",
]

[tool.hatch.envs.default]
skip-install = true

# ----------------  test configuration ----------------
[tool.hatch.envs.hatch-test]
dependencies = ["tox"]

[tool.hatch.envs.hatch-test.scripts]
run = ["tox"]
